--- a/docker/nginx/staging-ssl.conf
+++ b/docker/nginx/staging-ssl.conf
@@ -1,38 +1,93 @@
+# Upstream para la aplicación Node.js
 upstream artesa_app {
     server app:3000;
     keepalive 32;
 }
 
-# Redirect HTTP to HTTPS
+# Mapa para CORS dinámico - Orígenes permitidos
+map $http_origin $cors_origin {
+    default "";
+    "~^https://d1bqegutwmfn98\.cloudfront\.net$" $http_origin;
+    "~^https://ec2-44-216-131-63\.compute-1\.amazonaws\.com$" $http_origin;
+    "~^http://ec2-44-216-131-63\.compute-1\.amazonaws\.com$" $http_origin;
+    "~^https?://localhost:[0-9]+$" $http_origin;
+}
+
+# Mapa para credenciales CORS
+map $cors_origin $cors_cred {
+    default "";
+    "~." "true";
+}
+
+# Mapa para headers permitidos
+map $cors_origin $cors_headers {
+    default "";
+    "~." "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform";
+}
+
+# Mapa para métodos permitidos
+map $cors_origin $cors_methods {
+    default "";
+    "~." "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD";
+}
+
+# ========================================
+# SERVIDOR HTTP (Puerto 80)
+# ========================================
 server {
     listen 80;
     server_name ec2-44-216-131-63.compute-1.amazonaws.com;
     
-    # Health check para ALB - no redirigir
-    location /health {
+    # Variables para logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    # Health check para ALB - sin CORS necesario
+    location = /health {
         proxy_pass http://artesa_app/api/health;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        access_log off;
     }
 
-    # API routes - permitir HTTP y manejar CORS
-    location /api/ {
-        # Headers CORS más permisivos para desarrollo
-        add_header Access-Control-Allow-Origin $http_origin always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-        add_header Access-Control-Allow-Credentials "true" always;
+    # Health check adicional para la aplicación
+    location = /api/health {
+        # Headers CORS
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
 
+        proxy_pass http://artesa_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Rutas de API con CORS completo
+    location /api/ {
+        # Headers CORS para todas las respuestas
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
+
+        # Manejar preflight OPTIONS
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin $http_origin always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-            add_header Access-Control-Allow-Credentials "true" always;
-            add_header Access-Control-Max-Age 86400;
-            add_header Content-Type "text/plain charset=UTF-8";
-            add_header Content-Length 0;
+            add_header Access-Control-Allow-Origin $cors_origin always;
+            add_header Access-Control-Allow-Credentials $cors_cred always;
+            add_header Access-Control-Allow-Headers $cors_headers always;
+            add_header Access-Control-Allow-Methods $cors_methods always;
+            add_header Access-Control-Max-Age 86400 always;
+            add_header Content-Type "text/plain charset=UTF-8" always;
+            add_header Content-Length 0 always;
             return 204;
         }
 
+        # Proxy a la aplicación
         proxy_pass http://artesa_app;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -45,23 +100,65 @@ server {
         client_max_body_size 50M;
     }
 
-    # Para otras rutas, redirigir a HTTPS
-    # Todas las rutas de API sin redirección
-    location / {
-        # Headers CORS más permisivos para desarrollo
-        add_header Access-Control-Allow-Origin $http_origin always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-        add_header Access-Control-Allow-Credentials "true" always;
+    # Documentación Swagger
+    location /api-docs/ {
+        # Headers CORS
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
 
+        proxy_pass http://artesa_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Swagger JSON
+    location /swagger.json {
+        # Headers CORS
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
+
+        proxy_pass http://artesa_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Archivos estáticos (uploads)
+    location /uploads/ {
+        # Headers CORS para archivos
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+
+        proxy_pass http://artesa_app;
+        proxy_set_header Host $host;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Todas las demás rutas
+    location / {
+        # Headers CORS
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
+
+        # Manejar preflight OPTIONS
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin $http_origin always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-            add_header Access-Control-Allow-Credentials "true" always;
-            add_header Access-Control-Max-Age 86400;
-            add_header Content-Type "text/plain charset=UTF-8";
-            add_header Content-Length 0;
+            add_header Access-Control-Allow-Origin $cors_origin always;
+            add_header Access-Control-Allow-Credentials $cors_cred always;
+            add_header Access-Control-Allow-Headers $cors_headers always;
+            add_header Access-Control-Allow-Methods $cors_methods always;
+            add_header Access-Control-Max-Age 86400 always;
+            add_header Content-Type "text/plain charset=UTF-8" always;
+            add_header Content-Length 0 always;
             return 204;
         }
 
@@ -78,41 +175,84 @@ server {
     }
 }
 
-# HTTPS server
+# ========================================
+# SERVIDOR HTTPS (Puerto 443)
+# ========================================
 server {
     listen 443 ssl http2;
     server_name ec2-44-216-131-63.compute-1.amazonaws.com;
 
+    # Configuración SSL
     ssl_certificate /etc/nginx/ssl/cert.pem;
     ssl_certificate_key /etc/nginx/ssl/key.pem;
+    
+    # Configuración SSL mejorada
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
 
-    # Security headers
+    # Headers de seguridad
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     
+    # Ocultar versión de nginx
     server_tokens off;
 
-    # API routes con CORS dinámico
-    location /api/ {
-        # Headers CORS dinámicos
-        add_header Access-Control-Allow-Origin $http_origin always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-        add_header Access-Control-Allow-Credentials "true" always;
+    # Variables para logging
+    access_log /var/log/nginx/ssl_access.log;
+    error_log /var/log/nginx/ssl_error.log;
 
+    # Health check para ALB - sin CORS necesario
+    location = /health {
+        proxy_pass http://artesa_app/api/health;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        access_log off;
+    }
+
+    # Health check adicional para la aplicación
+    location = /api/health {
+        # Headers CORS
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
+
+        proxy_pass http://artesa_app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Rutas de API con CORS completo
+    location /api/ {
+        # Headers CORS para todas las respuestas
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
+
+        # Manejar preflight OPTIONS
         if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin $http_origin always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD" always;
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, g-recaptcha-response, recaptchatoken, bypass-tunnel-reminder, ngrok-skip-browser-warning, dnt, sec-ch-ua, sec-ch-ua-mobile, sec-ch-ua-platform" always;
-            add_header Access-Control-Allow-Credentials "true" always; 
-            add_header Access-Control-Max-Age 86400;
-            add_header Content-Type "text/plain charset=UTF-8";
-            add_header Content-Length 0;
+            add_header Access-Control-Allow-Origin $cors_origin always;
+            add_header Access-Control-Allow-Credentials $cors_cred always;
+            add_header Access-Control-Allow-Headers $cors_headers always;
+            add_header Access-Control-Allow-Methods $cors_methods always;
+            add_header Access-Control-Max-Age 86400 always;
+            add_header Content-Type "text/plain charset=UTF-8" always;
+            add_header Content-Length 0 always;
             return 204;
         }
 
+        # Proxy a la aplicación
         proxy_pass http://artesa_app;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -128,8 +268,14 @@ server {
         client_max_body_size 50M;
     }
 
-    # Documentación API
+    # Documentación Swagger
     location /api-docs/ {
+        # Headers CORS
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
+
         proxy_pass http://artesa_app;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -139,6 +285,12 @@ server {
 
     # Swagger JSON
     location /swagger.json {
+        # Headers CORS
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
+
         proxy_pass http://artesa_app;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -146,12 +298,47 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Fallback para otras rutas
-    location / {
+    # Archivos estáticos (uploads)
+    location /uploads/ {
+        # Headers CORS para archivos
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+
         proxy_pass http://artesa_app;
+        proxy_set_header Host $host;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Todas las demás rutas
+    location / {
+        # Headers CORS
+        add_header Access-Control-Allow-Origin $cors_origin always;
+        add_header Access-Control-Allow-Credentials $cors_cred always;
+        add_header Access-Control-Allow-Headers $cors_headers always;
+        add_header Access-Control-Allow-Methods $cors_methods always;
+
+        # Manejar preflight OPTIONS
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin $cors_origin always;
+            add_header Access-Control-Allow-Credentials $cors_cred always;
+            add_header Access-Control-Allow-Headers $cors_headers always;
+            add_header Access-Control-Allow-Methods $cors_methods always;
+            add_header Access-Control-Max-Age 86400 always;
+            add_header Content-Type "text/plain charset=UTF-8" always;
+            add_header Content-Length 0 always;
+            return 204;
+        }
+
+        proxy_pass http://artesa_app;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;   
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        client_max_body_size 50M;
     }
 }
